--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <section class="section" id="first-section"">
+        <section class="section">
             <h1>Sobre</h1>
             <p>
                 Breve descrição.
