add: profile foto

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         </nav>
     </header>
     <main>
-        <section class="section">
+        <section class="about-section">
             <h1>Sobre</h1>
-            <p>
-                Breve descrição.
-            </p>
-            <br>
-            <a href="#projects" class="btn-primary">Ver Projetos</a>
+            <div class="about-content">
+                <img src="/images/profile.jpg" alt="Minha foto" class="profile-photo">
+                <div class="about-text">
+                    <p>Breve descrição.</p>
+                </div>
+            </div>
         </section>
 
         <section>
