--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="about-section">
             <h1>Sobre</h1>
             <div class="about-content">
-                <img src="/images/profile.jpg" alt="Minha foto" class="profile-photo">
+                <img src="images/profile.jpg" alt="Minha foto" class="profile-photo">
                 <div class="about-text">
                     <p>Breve descrição.</p>
                 </div>
