--- a/index.html
+++ b/index.html
@@ -11,50 +11,107 @@
     <header class="header">
         <div id="logo">Daniela Ramos Jordão</div>
         <nav class="nav-links" id="header-links">
-            <a href="https://www.linkedin.com/in/daniela-ramos-jordao/">LinkedIn</a>
-            <a href="https://github.com/danielarjordao">GitHub</a>
-            <a href="#Projetos">Projetos</a>
+            <a href="https://www.linkedin.com/in/daniela-ramos-jordao/" class="btn-primary">LinkedIn</a>
+            <a href="https://github.com/danielarjordao" class="btn-primary">GitHub</a>
+            <a href="#Projetos" class="btn-primary">Projetos</a>
+            <a href="mailto:danielaramosjordao@gmail.com" class="btn-primary">Email</a>
         </nav>
     </header>
     <main>
         <section class="about-section">
-            <h1>Sobre</h1>
-            <div class="about-content">
-                <img src="images/profile.png" alt="Minha foto" class="profile-photo">
-                <div class="about-text">
-                    <p>Breve descrição.</p>
-                </div>
+        <div class="about-content">
+            <div class="about-side">
+                <img src="images/profile.png" alt="Daniela Ramos Jordão" class="profile-photo">
+                <p>
+					Porto, Portugal
+					<br>
+                    PT (Nativo) | EN (B2)
+				</p>
             </div>
+            <div class="about-text">
+			    <h1>Sobre Mim</h1>
+                <p>
+                    Desenvolvedora de Software com sólida formação analítica em contabilidade. Atualmente, aprofundo competências na 42 Porto, especializando-me em C e C++ e fortalecendo fundamentos essenciais da ciência da computação. Também participo do programa UpSkill, com foco em JavaScript e ServiceNow, ampliando minha experiência em desenvolvimento de software e soluções de automação. Gosto de transformar problemas complexos em soluções limpas e eficientes, especialmente onde aplico tecnologia a negócios, automação e otimização de processos.
+                </p>
+                <h3>Competências</h3>
+                <ul class="about-list">
+                    <li>Hard Skills: C, C++, Git, Shell, Excel, Contabilidade, Relatórios Financeiros, Otimização de Processos</li>
+                    <li>Soft Skills: Pensamento Analítico, Autogestão, Comunicação Intercultural, Trabalho em Equipa, Organização, Aprendizagem Contínua, Adaptabilidade</li>
+                </ul>
+                <h3>Educação</h3>
+                <ul class="about-list">
+                <li>Instituto Politécnico do Cávado e do Ave | UpSkill: ServiceNow Development (2025 – 2026)</li>
+                    <li>42 Porto | Ciência da Computação (2023 – 2026)</li>
+                    <li>Centro Universitário Municipal de São José | Licenciatura em Contabilidade (2011 – 2018)</li>
+                </ul>
+            </div>
+        </div>
         </section>
-
         <section>
-            <div">
+            <div id="Projetos">
                 <h2>Projetos em Destaque</h2>
                 <div class="project-grid">
-                    <div class="project-card">
-                        <h4>Nome do Projeto</h4>
-                        <p>Descrição curta.</p>
-                        <text class="extra-text">Tecnologias</text>
-                    </div>
-                    <div class="project-card">
-                        <h4>Nome do Projeto</h4>
-                        <p>Descrição curta.</p>
-                        <text class="extra-text">Tecnologias</text>
-                    </div>
-                    <div class="project-card">
-                        <h4>Nome do Projeto</h4>
-                        <p>Descrição curta.</p>
-                        <text class="extra-text">Tecnologias</text>
-                    </div>
+					<!-- target="_blank" abre o link em uma nova aba -->
+                    <a href="https://github.com/danielarjordao/CPP.git" class="project-card" target="_blank">
+                        <h4>CPP</h4>
+                        <p>42 C++ Modules Repository and concepts overview.</p>
+                        <span class="extra-text">C++</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/NetPractice.git" class="project-card" target="_blank">
+                        <h4>NetPractice</h4>
+                        <p>Practical exercise to explore basic networking concepts.</p>
+                        <span class="extra-text">Networking</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/cub3D" class="project-card" target="_blank">
+                        <h4>cub3D</h4>
+                        <p>3D raycasting engine inspired by early FPS games.</p>
+                        <span class="extra-text">C</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/Philosophers" class="project-card" target="_blank">
+                        <h4>Philosophers</h4>
+                        <p>Solves concurrency with threads and mutexes.</p>
+                        <span class="extra-text">C</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/minishell" class="project-card" target="_blank">
+                        <h4>minishell</h4>
+                        <p>A shell that parses, executes commands, and manages pipes.</p>
+                        <span class="extra-text">C</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/push_swap.git" class="project-card" target="_blank">
+                        <h4>push_swap</h4>
+                        <p>Sorts data using a limited set of stack operations.</p>
+                        <span class="extra-text">C</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/Born2beroot.git" class="project-card" target="_blank">
+                        <h4>Born2beroot</h4>
+                        <p>Basics of system administration and server setup.</p>
+                        <span class="extra-text">Sys Adm</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/get_next_line.git" class="project-card" target="_blank">
+                        <h4>get_next_line</h4>
+                        <p>Reads a line from a file descriptor.</p>
+                        <span class="extra-text">C</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/ft_printf.git" class="project-card" target="_blank">
+                        <h4>ft_printf</h4>
+                        <p>Recreation of printf with formatted string output.</p>
+                        <span class="extra-text">C</span>
+                    </a>
+                    <a href="https://github.com/danielarjordao/Libft.git" class="project-card" target="_blank">
+                        <h4>Libft</h4>
+                        <p>Implementation of basic C standard library functions.</p>
+                        <span class="extra-text">C</span>
+                    </a>
                 </div>
                 </div>
             </div>
         </section>
     </main>
-
-    <footer class="footer container">
-        <p>Contatos</p>
-    </footer>
-
+        <footer class="footer container">
+            <div class="footer-grid">
+                <div>Obrigada por visitar meu portfólio!</div>
+                <div>© Daniela Ramos Jordão, 2026</div>
+            </div>
+        </footer>
 </body>
 </html>
